[gd_scene load_steps=19 format=3 uid="uid://dtc6ribkhsjcp"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_d2d54"]
[ext_resource type="Texture2D" uid="uid://c001fuu20sopf" path="res://assets/sprites/ham/ham.png" id="2_f3bfc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8yb21"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uylju"]
atlas = ExtResource("2_f3bfc")
region = Rect2(0, 381, 126, 127)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_1q2vq"]
load_path = "res://.godot/imported/ham.png-7e3cb123fc57350b56fe91822cb832a5.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_abyth"]
atlas = SubResource("CompressedTexture2D_1q2vq")
region = Rect2(126, 254, 126, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_5aa8u"]
atlas = SubResource("CompressedTexture2D_1q2vq")
region = Rect2(0, 0, 126, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_4eldv"]
atlas = SubResource("CompressedTexture2D_1q2vq")
region = Rect2(126, 0, 126, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_kexdi"]
atlas = ExtResource("2_f3bfc")
region = Rect2(0, 127, 126, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_ash11"]
atlas = ExtResource("2_f3bfc")
region = Rect2(126, 127, 126, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntmid"]
atlas = ExtResource("2_f3bfc")
region = Rect2(252, 127, 126, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gmts"]
atlas = ExtResource("2_f3bfc")
region = Rect2(126, 127, 126, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcxuk"]
atlas = SubResource("CompressedTexture2D_1q2vq")
region = Rect2(0, 254, 126, 127)

[sub_resource type="SpriteFrames" id="SpriteFrames_ky0cm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uylju")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_abyth")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5aa8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4eldv")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kexdi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ash11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntmid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gmts")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcxuk")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_1qkfq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ujfnh"]
radius = 6.53584

[sub_resource type="CircleShape2D" id="CircleShape2D_ipuka"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xlyq0"]
radius = 13.8864

[node name="Player" type="CharacterBody2D"]
scale = Vector2(0.98567, 1)
script = ExtResource("1_d2d54")

[node name="CoyoteTimer" type="Timer" parent="."]
one_shot = true

[node name="BubbleBackSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8yb21")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_ky0cm")
animation = &"idle"
autoplay = "idle"

[node name="BubbleFrontSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1qkfq")

[node name="CollisionBubble1" type="CollisionShape2D" parent="."]
position = Vector2(3.04362, 11)
scale = Vector2(7.45247, 7.44)
shape = SubResource("CircleShape2D_ujfnh")

[node name="CollisionBubble2" type="CollisionShape2D" parent="."]
position = Vector2(1.01454, -6)
scale = Vector2(7.45247, 7.44)
shape = SubResource("CircleShape2D_ipuka")

[node name="CollisionBubble3" type="CollisionShape2D" parent="."]
position = Vector2(1.01454, -35)
scale = Vector2(7.45247, 7.44)
shape = SubResource("CircleShape2D_xlyq0")

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
